--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
             sudo mkdir -p /var/www/CodeDaily.Client
             sudo chown -R ec2-user:ec2-user /var/www/CodeDaily.Client
 
-      - name: Deploy build files to EC2
+      - name: Deploy artifact to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -46,7 +46,7 @@ jobs:
           source: "dist/"
           target: "/var/www/CodeDaily.Client/"
     
-      - name: Set correct permissions and restart Nginx
+      - name: Update permissions and restart Nginx
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
